--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,6 +41,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DC'
 - !lcsh 'France -- Court and courtiers'
+- GITenberg
 title: "Mémoires de madame de Rémusat (1/3)\r\npubliées par son petit-fils, Paul de\
   \ Rémusat"
 url: http://www.gutenberg.org/ebooks/33893
